lib/libui/bottom_pane/exec_footer/snapshots/libui__bottom_pane__exec_footer__tests__render_many_sessions.snap
---
source: lib/libui/bottom_pane/exec_footer.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 1 },
    content: [
        "  123 background terminals running · /ps to view ·",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
